--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -15,6 +15,6 @@ jobs:
     with:
       environment: dev
       aws-assume-role-arn: "arn:aws:iam::699475942539:role/github-actions-urpdrum-pipeline"
-      aws-region: "sa-east-1"
-      aws-statefile-s3-bucket: "urpdrum-sa-east-1-terraform-statefile"
-      aws-lock-dynamodb-table: "urpdrum-sa-east-1-terraform-lock"
+      aws-region: "us-east-1"
+      aws-statefile-s3-bucket: "urpdrum-us-east-1-terraform-statefile"
+      aws-lock-dynamodb-table: "urpdrum-us-east-1-terraform-lock"
