initial commit 02-04 src G8_1

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,4 +1,4 @@
-name: "dev DEPLOY"
+name: "DEV DEPLOY"
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
   terraform:
     uses: ./.github/workflows/terraform.yml
     with:
-      environment: develop
+      environment: dev
       aws-assume-role-arn: "arn:aws:iam::699475942539:role/github-actions-urpdrum-pipeline"
       aws-region: "us-east-1"
       aws-statefile-s3-bucket: "urpdrum-us-east-1-teste2-git"
